--- a/style.css
+++ b/style.css
@@ -93,3 +93,15 @@ a:hover {
     display: flex;
     justify-content: space-between;
 }
+
+.button {
+    border: none;
+    color: rgb(0, 102, 255);
+    left: 1250px;
+    top: 300px;
+    text-align: center;
+    position: absolute;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
